Fix mimeType loss during file creation or update.

Summary:
LibKGAPI allows specifying the mimeType of an upload via the associated `KGAPI2::Drive::File`.
This is required in uploads where the data isn't sufficient in determining the mime-type (i.e. docx files as reported in [[ https://bugs.kde.org/show_bug.cgi?id=401151 | BUG 401151 ]]).

BUG: 401151

Reviewers: elvisangelaccio

Reviewed By: elvisangelaccio

Subscribers: dvratil, #kio_gdrive

Tags: #kio_gdrive

Differential Revision: https://phabricator.kde.org/D22628